// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BorderedBox renders correctly 1`] = `
<DocumentFragment>
  .cache-1drc2uw {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
}

<div
    class="cache-1drc2uw e1b630740"
  />
</DocumentFragment>
`;

exports[`BorderedBox renders correctly with children 1`] = `
<DocumentFragment>
  .cache-1drc2uw {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
}

<div
    class="cache-1drc2uw e1b630740"
  >
    Hello World
  </div>
</DocumentFragment>
`;
